feat: css layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 </head>
 
 <body>
+    <div id="app">
+        <main>
+            <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis repellat nostrum voluptates ipsam ratione id, quam, veritatis aspernatur perferendis modi quo corporis cupiditate libero dolorum accusantium! Qui a magnam laudantium!</div>
+        </main>
 
+        <aside>
+            <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quis corporis, quam perferendis repellendus blanditiis saepe id nisi temporibus officia ipsa incidunt eaque cupiditate consequuntur quasi, voluptatem soluta iusto doloribus?</div>
+        </aside>
+    </div>
 </body>
 
 </html>
