feat: configuring data and select inputs

--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
 
                         <div class="textarea-wrapper">
                             <label for="medial-info">Informações médicas</label>
-                            <textarea name="medial-info" id="medical-info" 
-                                cols="30" rows="10"
-                                placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, especifique)">
-                            </textarea>
+                            <textarea name="medial-info" id="medical-info" cols="30" rows="10"
+                                placeholder="A criança ola deve estar ciente? (Se sim, especifique)"
+                            ></textarea>
                         </div>
 
                         <div class="droparea-wrapper">
