--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <input type="number" id="number" name="number">
                             </div>
                         </div>
-                        
+
                         <div class="flex">
                             <div class="input-wrapper felx-2">
                                 <label for="city">Cidade</label>
@@ -108,7 +108,32 @@
                                 <input type="state" id="state" name="state" value="SP" disabled>
                             </div>
                         </div>
-                        
+
+                    </fieldset>
+
+                    <fieldset class="gardian">
+                        <legend>Informações do responsável</legend>
+                        <div class="input-wrapper">
+                            <label for="gardian">Nome do responsável</label>
+                            <input type="text" id="gardian" name="gardian">
+                            <small>Principal responsável legal e contato de
+                                emergência
+                            </small>
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="phone">Telefone</label>
+                            <input type="tel" id="phone" name="phone" placeholder="(XX) 9 XXXX-XXXX">
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="mail">Email</label>
+                            <input type="email" name="mail" id="mail" required></input>
+                            <div class="error">
+                                <img src="assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
+                                <span>Insira um e-mail válido</span>
+                            </div>
+                        </div>
                     </fieldset>
                 </form>
             </div>
